--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,19 @@
 language: java
 script:
+  #lance les tests
   - mvn clean verify --file ./simple-api/pom.xml
+
+  #docker connexion
   - docker login -u $Dockeruser -p $Dockerpwd
+
+  #docker image
+  - docker tag picture_1 $Dockeruser/picture_1
+  - docker push $Dockeruser/picture_1
+
+cache:
+
+directories:
+  - $HOME/.m2
+services:
+  - docker
+
