--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ addons:
     token:
       secure: "$SONARCLOUD_TOKEN" # encrypted value of your token
 
-  - mvn clean verify org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=Antoine-VILLERS_devops
+  - mvn clean verify --file ./simple-api/pom.xml org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=Antoine-VILLERS_devops
