--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,10 @@ addons:
   sonarcloud:
     organization: "antoine-villers"
     token: "$SONARCLOUD_TOKEN" # encrypted value of your token
+
+cache:
+  directories:
+    - $HOME/.m2
+services:
+  - docker
+
