--- a/ansible/inventories/setup.yml
+++ b/ansible/inventories/setup.yml
@@ -2,6 +2,8 @@ all:
   vars:
     ansible_user: centos
     ansible_ssh_private_key_file: ../../.ssh/id_rsa
+    db_user: usr
+    db_password: pwd
   children:
     prod:
       hosts: antoine.villers.takima.cloud
